# audioFlux-redux

./: README.md  linux_install.sh  repositorio-redux.md
src/: CMakeLists.txt
